tests/snapshots/strip_trailing_commas/class_bases.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/strip_trailing_commas/class_bases.input.py
---
strip-trailing-commas@275..276
