tests/snapshots/strip_trailing_commas/class_bases.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/strip_trailing_commas/class_bases.input.py
---
"""
A multi-line class base list drops its trailing comma. The class's
argument list shares the `Arguments` shape with function calls, and
the backward scan from before the closing `)` lands on the comma
after the last base.
"""


class Loader(
    BaseLoader,
    CacheMixin
):
    pass
