tests/snapshots/strip_trailing_commas/diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
---
strip-trailing-commas@275..276
