tests/snapshots/strip_trailing_commas/dict_literal.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/strip_trailing_commas/dict_literal.input.py
---
"""
A multi-line dict literal drops its trailing comma. The dict's
range covers `{...}`, and the backward scan from before the closing
`}` lands on the comma after the last value.
"""

config = {
    "linkage": "ward",
    "metric": "euclidean",
    "n_clusters": None,
    "threshold": 0.7
}
