tests/snapshots/strip_trailing_commas/function_call.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/strip_trailing_commas/function_call.input.py
---
strip-trailing-commas@285..286
