tests/snapshots/strip_trailing_commas/function_call.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/strip_trailing_commas/function_call.input.py
---
"""
A multi-line function call drops its trailing comma. The argument
list's range covers `(...)`, and the backward scan from before the
closing `)` lands on the comma after the last argument.
"""

posting = Posting(
    company="Cianbro",
    date_posted=None,
    title="Electrician"
)
