tests/snapshots/strip_trailing_commas/function_signature.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/strip_trailing_commas/function_signature.input.py
---
strip-trailing-commas@287..288
