tests/snapshots/strip_trailing_commas/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/strip_trailing_commas/idempotent.input.py
---

