tests/snapshots/strip_trailing_commas/list_literal.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/strip_trailing_commas/list_literal.input.py
---
strip-trailing-commas@263..264
